unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/bt_stripe__Virtual_Terminal_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Blackthorn Payments | Virtual Terminal</label>
</CustomObject>