unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Default_New_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_New_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shows the “New Payment Method” screen when loading the Virtual Terminal. Can’t be enabled with “Disable New Payment Method”</inlineHelpText>
    <label>Default New Payment Method</label>
    <type>Checkbox</type>
</CustomField>