unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Disable_Amount_in_Communities__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Amount_in_Communities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you would like the Amount field to be read-only.</description>
    <inlineHelpText>Check if you would like the Amount field to be read-only.</inlineHelpText>
    <label>Disable Amount</label>
    <type>Checkbox</type>
</CustomField>