unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Disable_New_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_New_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the ability to create a new Payment Method in the Virtual Terminal. Can’t be enabled with “Default New Payment Method”</inlineHelpText>
    <label>Disable New Payment Method</label>
    <type>Checkbox</type>
</CustomField>