unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Disable_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Payment_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Makes the Payment Gateway field read only.</description>
    <label>Disable Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>