unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Disable_Payment_Method_Filter__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Payment_Method_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you want to load all of the payment methods regardless of the related to contact/account.</description>
    <inlineHelpText>Check if you want to load all of the payment methods regardless of the related to contact/account.</inlineHelpText>
    <label>Disable Payment Method Filter</label>
    <type>Checkbox</type>
</CustomField>