unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Hide_Card_Tab__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Hide_Card_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, Card details will be hidden from the list of available options when creating a payment method via the Virtual Terminal.</description>
    <inlineHelpText>If enabled, Card details will be hidden from the list of available options when creating a payment method via the Virtual Terminal.</inlineHelpText>
    <label>Hide Card Tab</label>
    <type>Checkbox</type>
</CustomField>