unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Hide_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Hide_Process_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you wanted to set &quot;Capture Now&quot; as a default process type and hide other options.</description>
    <inlineHelpText>Check if you wanted to set &quot;Capture Now&quot; as a default process type and hide other options.</inlineHelpText>
    <label>Hide Process Type</label>
    <type>Checkbox</type>
</CustomField>