unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Make_CVC_Field_Optional__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Make_CVC_Field_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, the CVC field will be optional when adding a payment method via the Virtual Terminal.</description>
    <inlineHelpText>If enabled, the CVC field will be optional when adding a payment method via the Virtual Terminal.</inlineHelpText>
    <label>Make CVC Field Optional</label>
    <type>Checkbox</type>
</CustomField>