unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Related_To_Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Related_To_Priority_Order__c</fullName>
    <description>The Related To field defaults to Account on the Virtual Terminal. If you want to change to default to Lead or Contact, set this value to Contact or Lead.</description>
    <inlineHelpText>The Related To field defaults to Account on the Virtual Terminal. If you want to change to default to Lead or Contact, set this value to Contact or Lead.</inlineHelpText>
    <label>Related To Default Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>