unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Show_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Show_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, additional address fields (Street, City, State, and Country/Region) will be visible on the Payment Method creation page in the Virtual Terminal. These fields are required for certain Spreedly gateways.</inlineHelpText>
    <label>Show Address</label>
    <type>Checkbox</type>
</CustomField>