unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Transaction_Success_Message__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Transaction_Success_Message__c</fullName>
    <description>The message is displayed when a transaction is successfully processed.</description>
    <label>Transaction Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>